feat: add lootAmount field to team
