# src/packages/api/src/team/dto/team.dto.ts
@@ -1,6 +1,7 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { ClientDto } from '../../client/dto/client.dto';
 import { WasteDto } from './waste.dto';
+import { IsNumber, IsOptional } from 'class-validator';
 
 export class TeamDto {
   @ApiProperty()
@@ -11,6 +12,9 @@ export class TeamDto {
 
   @ApiProperty()
   name: string;
+
+  @ApiProperty()
+  lootAmount?: number | null;
 
   @ApiProperty({ type: () => [ClientDto] })
   members: ClientDto[];
